--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
- Pensamentos da vida...
-Todos temos pensamentos ao decorrer da vida, bons e ruins. Os piores são os intrusivos, que surgem de repente mais não somem tão rápido, causando em nós, dúvidas sobre o porque disso surgir.
-O mais difícil, sem dúvidas é o fato de que na maioria das vezes não controlamos o que pensamos, isso se torna perigosos pois, pensamentos se tornam palavras que se tornam atitudes que determina quem você é, por isso, é importante resaltar que devemos tomar controle de nossas mentes e ao menos tentar controlar 90% dos nossos pensamentos.
-Devemos ficar cientes de que, pensar faz parte da anatômia humana, é algo inevitável e pertubador em algumas ocasioẽs, porém necessário, algumas atitudes necessitam de que pensemos antes de realizar tal ação, para o arrependimento não bater depois e ficarmos pensando no que fizemos ou deixemos de fazer.
-Individualismo é a palavra ideal para ressaltar pensamentos, tendo o fato de que todos temos diferentes pensamentos ao decorrer da vida, mas, ao mesmo tempo, umas palavra que não seria ideal pelo fato de que muitas pessoas pensam o mesmo, porém, nunca pensam especificamente igual, o que nos torna, todos diferentes, já que, somos aquilo que pensamos, como comentado acima.
+ <h1>Pensamentos da vida...
+<p>Todos temos pensamentos ao decorrer da vida, bons e ruins. Os piores são os intrusivos, que surgem de repente mais não somem tão rápido, causando em nós, dúvidas sobre o porque disso surgir.
+
+<p>O mais difícil, sem dúvidas é o fato de que na maioria das vezes não controlamos o que pensamos, isso se torna perigosos pois, pensamentos se tornam palavras que se tornam atitudes que determina quem você é, por isso, é importante resaltar que devemos tomar controle de nossas mentes e ao menos tentar controlar 90% dos nossos pensamentos.
+
+<p>Devemos ficar cientes de que, pensar faz parte da anatômia humana, é algo inevitável e pertubador em algumas ocasioẽs, porém necessário, algumas atitudes necessitam de que pensemos antes de realizar tal ação, para o arrependimento não bater depois e ficarmos pensando no que fizemos ou deixemos de fazer.
+
+<p>Individualismo é a palavra ideal para ressaltar pensamentos, tendo o fato de que todos temos diferentes pensamentos ao decorrer da vida, mas, ao mesmo tempo, umas palavra que não seria ideal pelo fato de que muitas pessoas pensam o mesmo, porém, nunca pensam especificamente igual, o que nos torna, todos diferentes, já que, somos aquilo que pensamos, como comentado acima.
+
+
+
+<tag>
