--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 <p>Devemos ficar cientes de que, pensar faz parte da anatômia humana, é algo inevitável e pertubador em algumas ocasioẽs, porém necessário, algumas atitudes necessitam de que pensemos antes de realizar tal ação, para o arrependimento não bater depois e ficarmos pensando no que fizemos ou deixemos de fazer.</p>
 
-<p>Individualismo é a palavra ideal para ressaltar pensamentos, tendo o fato de que todos temos diferentes pensamentos ao decorrer da vida, mas, ao mesmo tempo, umas palavra que não seria ideal pelo fato de que muitas pessoas pensam o mesmo, porém, nunca pensam especificamente igual, o que nos torna, todos diferentes, já que, somos aquilo que pensamos, como comentado acima.</p>
+<p>Individualismo é a palavra ideal para ressaltar pensamentos, tendo o fato de que <strong>todos</strong> temos diferentes pensamentos ao decorrer da vida, mas, ao mesmo tempo, umas palavra que não seria ideal pelo fato de que muitas pessoas pensam o mesmo, porém, nunca pensam especificamente igual, o que nos torna, todos diferentes, já que, somos aquilo que pensamos, como comentado acima.</p>
 
 
