--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+ <!DOCTYPE html>
+ 
  <h1>Pensamentos da vida...</h1>
+
 <p>Todos temos pensamentos ao decorrer da vida, bons e ruins. Os piores são os intrusivos, que surgem de repente mais não somem tão rápido, causando em nós, dúvidas sobre o porque disso surgir.</p>
 
 <p>O mais difícil, sem dúvidas é o fato de que na maioria das vezes não controlamos o que pensamos, isso se torna perigosos pois, pensamentos se tornam palavras que se tornam atitudes que determina quem você é, por isso, é importante resaltar que devemos tomar controle de nossas mentes e ao menos tentar controlar 90% dos nossos pensamentos.</p>
