--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
- 
+ <html>
  <h1>Pensamentos da vida...</h1>
 
 <p>Todos temos pensamentos ao decorrer da vida, bons e ruins. Os piores são os intrusivos, que surgem de repente mais não somem tão rápido, causando em nós, dúvidas sobre o porque disso surgir.</p>
@@ -10,4 +10,4 @@
 
 <p>Individualismo é a palavra ideal para ressaltar pensamentos, tendo o fato de que <strong>todos</strong> temos diferentes pensamentos ao decorrer da vida, mas, ao mesmo tempo, umas palavra que não seria ideal pelo fato de que muitas pessoas pensam o mesmo, porém, nunca pensam especificamente igual, o que nos torna, todos diferentes, já que, somos aquilo que pensamos, como comentado acima.</p>
 
-
+</html>
