--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
- <html>
+ <html lang="pt-br">
     <meta charset="UTF-8">
-    
+
  <h1>Pensamentos da vida...</h1>
 
     <p>Todos temos pensamentos ao decorrer da vida, bons e ruins. Os piores são os intrusivos, que surgem de repente mais não somem tão rápido, causando em nós, dúvidas sobre o porque disso surgir.</p>
