--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
  <html lang="pt-br">
     <meta charset="UTF-8">
+    <title> Pensamentos da vida</title>
 
  <h1>Pensamentos da vida...</h1>
 
