--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
  <!DOCTYPE html>
  <html lang="pt-br">
+    <head>
+     </head>
+     <body>
+
+     <body/>
+
+
     <meta charset="UTF-8">
     <title>Pensamentos da vida</title>
 
