--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Pensamentos da vida</title>
      </head>
      <body>
-      <h1>Pensamentos da vida...</h1>
+      <h1 style="text-align: center">Pensamentos da vida...</h1>
 
     <p>Todos temos pensamentos ao decorrer da vida, bons e ruins. Os piores são os intrusivos, que surgem de repente mais não somem tão rápido, causando em nós, dúvidas sobre o porque disso surgir.</p>
 
