--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <head>
       <meta charset="UTF-8">
       <title>Pensamentos da vida</title>
+
+      <style>
+        p {
+          text-align: center
+        }
+      </style>
      </head>
      <body>
       <h1 style="text-align: center">Pensamentos da vida...</h1>
