--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>Pensamentos da vida</title>
-
+      <link rel="stylesheet" href="style.css">
       <style>
         p {
           text-align: center
