--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       </style>
      </head>
      <body>
-      <h1 style="text-align: center: background: #CCCCCC">Pensamentos da vida...</h1>
+      <h1 style="text-align: center; background: #CCCCCC">Pensamentos da vida...</h1>
 
     <p>Todos temos pensamentos ao decorrer da vida, bons e ruins. Os piores são os intrusivos, que surgem de repente mais não somem tão rápido, causando em nós, dúvidas sobre o porque disso surgir.</p>
 
